<resources>
    <string name="app_name">myECO</string>

    <string name="whatsapp_web_url">https://app.myeco.id</string>
    <string name="whatsapp_host">.myeco.id</string>
    <string name="user_agent_string">Mozilla/5.0 (Windows NT 6.1; WOW64; rv:54.0) Gecko/20100101 Firefox/72.0</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--main fragment strings-->
    <string name="switch_wifi">Wifi</string>
    <string name="til_ssid">Input SSID</string>
    <string name="til_pass">Input Password</string>
    <string name="til_user">Input User Id</string>
    <string name="btn_send">Send Data</string>

    <!--message strings-->
    <string name="text_success">Success! Connected to ESP Now!</string>
    <string name="text_failed">Failed Connect to ESP!</string>
</resources>